cmake_minimum_required (VERSION 2.8)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake") 
project (raspicam_test)
find_package(raspicam REQUIRED)
find_package(OpenCV)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING OPENCV TESTS")
add_executable (test test_mul.cpp)
add_executable (testCam testCam.cpp)  
target_link_libraries (test ${raspicam_CV_LIBS} wiringPi pthread)
target_link_libraries (testCam ${raspicam_CV_LIBS} wiringPi pthread)
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()